style.css
/* ... */
	
	#startPauseButton:hover {
		background-color: darkslategray;
	}
	
	.play-icon {
		width: 100%;
		display: none;
		margin: 0 auto;
		padding: 0.2em 0 0 0.2em;
		color: #fff;
		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	}
	
	.play-icon svg {
		fill: white;
		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
		-webkit-user-select: none;
		outline-width: 0px;
		box-sizing: border-box;
		outline: inherit;
		width: 100%;
		height: auto;
	}
	
	.pause-icon {
		width: 100%;
		display: none;
		margin: 0 auto;
		padding: 0.2em 0 0 0.2em;
		color: #fff;
		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
		width: 100%;
		height: auto;
	}
	
	.pause-icon svg {
		fill: white;
		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
		outline-width: 0px;
		box-sizing: border-box;
		outline: inherit;
	}
	
	.state-playing .pause-icon {
		display: block;
	}
	
	.state-paused .play-icon {
		display: block;
	}
	
	#controlBar {
		position: relative;
		background-color: rgba(23, 35, 34, 0.75);
		height: 100%;
		display: flex;
		justify-content: flex-end;
		border-radius: 2px;
		padding: 0px 0px 0px 1em;
		user-select: none;
		-moz-user-select: none;
		-khtml-user-select: none;
		-webkit-user-select: none;
		-o-user-select: none;
	}
	
	#playBarLabel {
		position: relative;
		float: left;
		width: 100%;
		padding-top: 7.5px;
	}
	
	#playBar {
		position: relative;
		float: right;
		width: 100%;
	}
	#playBarBubble {
		position: absolute;
		top: -20px;
		z-index: 5;
	}
	
	#addBookmarkButton
	{
		font-size: 24px;
	}
	
	#controlBarOptions {
		position: relative;
		float: right;
		width: 40px;
		top: 0px;
		margin: 0 auto;
		padding-top: 5px;
		padding-left: 5px;
	}
	
	#controlBarOptions svg path {
		fill: white;
		stroke: white;
	}
	
	#playSpeed {
		position: relative;
		width: 100%;
		height: 90%;
		top: 0.6em;
		right: 0.1em;
		-webkit-appearance: slider-vertical;
	}
	
	#playSpeedLabel {
		padding: 0 0;
		position: absolute;
		bottom: 2.4em;
		display: none;
		height: 12em;
		width: 2.2em;
		background-color: rgba(23, 35, 34, 0.75);
	}
	#controlBarOptions:hover #playSpeedLabel {
		display: block;
	}

	/*---------- End of control bar ----------*/
	
	*:active,
	*:hover {
		
	}
	.cursorPointer , input[type='checkbox']
	{
		cursor: pointer;
	}
	
	
	#menuList
	{
		position: fixed;
		display: block;
		z-index: 50;
		
	}

